--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
 
     <section>
-                <h1>Place Order Now!!!!</h1>
+                <h1>Place Order Now <span id="c1">!</span><span id="c2">!</span><span id="c3">!</span><span id="c4">!</span></h1>
+
               
                 <img class="bottom" src="./aimg/logo.png"  alt="" srcset=""> 
                 <img class="bottomleft" src="./aimg/bottomleft.png" alt="">
@@ -41,7 +42,7 @@
 
 
   <h3>Contact us and place order</h3>
-
+       
 
   
       <div class="you"> 
